@@ -1,7 +1,12 @@
 debhelper (11.2.2) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * Buildsystem.pm: Fix use of undefined variable in certain
     error conditions.
+
+  [ Dmitry Shachnev ]
+  * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
+    cross-compilation.  (Closes: #895286)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 09:40:32 +0000
 
